@@ -1,23 +1,22 @@
 package aoc.day01;
 
+import java.util.List;
+
 import aoc.Day;
 import aoc.Utils;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 public class Day01 implements Day {
 
     @Override
-    public String part1(String input) {
-        List<String> lines = Utils.splitLines(input);
-        List<Integer> leftIntegers = lines.stream().filter(s -> s.contains("  "))
-                .map(s -> Integer.valueOf(s.split("   ")[0])).sorted()
-                .collect(Collectors.toList());
+    public String part1(final String input) {
+        final List<String> lines = Utils.splitLines(input);
+        final List<Integer> leftIntegers = lines.stream().filter(s -> s.contains("  "))
+                .map(s -> Integer.valueOf(Utils.splitColumns(s)[0])).sorted()
+                .toList();
 
-        List<Integer> rightIntegers = lines.stream().filter(s -> s.contains("  "))
-                .map(s -> Integer.valueOf(s.split("   ")[1])).sorted()
-                .collect(Collectors.toList());
+        final List<Integer> rightIntegers = lines.stream().filter(s -> s.contains("  "))
+                .map(s -> Integer.valueOf(Utils.splitColumns(s)[1])).sorted()
+                .toList();
         int distance = 0;
         for(int i=0;i<leftIntegers.size();i++){
             distance += Math.abs(leftIntegers.get(i)-rightIntegers.get(i));
@@ -26,8 +25,9 @@ public class Day01 implements Day {
     }
 
     @Override
-    public String part2(String input) {
+    public String part2(final String input) {
         return input;
     }
+
 
 }
